--- a/app/src/main/res/layout/fragment_tienda_.xml
+++ b/app/src/main/res/layout/fragment_tienda_.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/grey"
-        tools:context=".Tienda" android:id="@+id/layoutTienda">
+        tools:context=".Tienda_Fragment" android:id="@+id/layoutTienda">
 
     <Button
             android:layout_width="457dp"
@@ -23,7 +23,7 @@
             android:background="@color/grey"
             android:id="@+id/checkOut" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp" android:layout_marginBottom="30dp"
-            app:layout_constraintBottom_toTopOf="@+id/button2"/>
+            app:layout_constraintBottom_toTopOf="@+id/button2" tools:ignore="VectorDrawableCompat"/>
     <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -32,7 +32,7 @@
             android:id="@+id/donaciones"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginBottom="196dp" app:layout_constraintBottom_toTopOf="@+id/button2"
-            app:layout_constraintHorizontal_bias="0.498"/>
+            app:layout_constraintHorizontal_bias="0.498" tools:ignore="VectorDrawableCompat"/>
     <ImageButton
             android:layout_width="94dp"
             android:layout_height="95dp"
