--- a/app/src/main/res/layout/adoptar_fragment.xml
+++ b/app/src/main/res/layout/adoptar_fragment.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Adoptar"
+        tools:context=".Adoptar_Fragment"
         android:id="@+id/layout_adoptar"
         android:background="#0E2F44">
 
