--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -3,7 +3,7 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="176dp"
-              android:background="@color/pinkgirl"
+              android:background="@color/colorPrimaryDark"
               android:gravity="bottom"
               android:padding="16dp"
               android:theme="@style/ThemeOverlay.AppCompat.Dark">
@@ -11,16 +11,22 @@
     <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher_launch_round"/>
+            android:src="@mipmap/ic_launcher_launch_round"
+            android:background="@drawable/redonditos_profile"
+            android:id="@+id/profile_pic"
+    />
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="8dp"
-            android:text="Profile"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+            android:text=""
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:id="@+id/name_text"
+    />
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="info@adoptapp.com"/>
+            android:text=""
+    android:id="@+id/mail_text"/>
 
 </LinearLayout>
