--- a/app/src/main/res/layout/adoptar_fragment.xml
+++ b/app/src/main/res/layout/adoptar_fragment.xml
@@ -5,86 +5,30 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Adoptar_Fragment"
+        tools:context=".model.Adoptar.Adoptar_Fragment"
         android:id="@+id/layout_adoptar"
         android:background="#0E2F44">
 
     <Button
+
+            android:textSize="50dp"
             android:layout_width="422dp"
             android:layout_height="91dp"
             android:id="@+id/button"
             android:background="@color/purple"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
     />
-    <Button
-            android:text="Next"
-            android:layout_width="107dp"
-            android:layout_height="58dp"
-            android:background="@drawable/redonditos_info"
 
-            android:id="@+id/next_button" android:layout_marginBottom="20dp"
-            app:layout_constraintBottom_toTopOf="@+id/button" android:layout_marginEnd="28dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="28dp"/>
-    <ImageButton
-            android:layout_width="47dp"
-            android:layout_height="48dp"
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_adoptar"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="#0E2F44"
+            android:layout_width="0dp"
+            android:layout_height="0dp">
 
-            app:srcCompat="@drawable/icon_info2_foreground"
-            android:id="@+id/info_Button"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="28dp"
-            android:layout_marginRight="28dp"
-            android:layout_marginBottom="32dp"
-            app:layout_constraintBottom_toTopOf="@+id/next_button" android:contentDescription="TODO"
-            tools:ignore="VectorDrawableCompat"/>
-    <de.hdodenhof.circleimageview.CircleImageView
-            android:text="MargenPhoto"
-            app:civ_border_width="4dp"
-            android:layout_width="320dp"
-            android:layout_height="320dp"
-            android:background="@drawable/margen_photo"
-            android:id="@+id/margen_photo_button"
-            app:layout_constraintTop_toTopOf="@+id/circleImageView"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="2dp"
-            android:layout_marginRight="2dp"
-            app:layout_constraintHorizontal_bias="0.485" app:layout_constraintBottom_toBottomOf="@+id/circleImageView"/>
-
-    <TextView
-            android:text="Nombre: Shalala"
-            android:layout_width="207dp"
-            android:layout_height="106dp"
-            android:id="@+id/info_Dog_Text"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="36dp" android:layout_marginStart="36dp"
-            app:layout_constraintTop_toBottomOf="@+id/margen_photo_button"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/info_Button" android:layout_marginRight="8dp"
-            app:layout_constraintHorizontal_bias="0.0" android:textColor="#FFFFFF"/>
-    <ImageButton
-            android:layout_width="94dp"
-            android:layout_height="95dp"
-            android:scaleType="fitCenter"
-            app:srcCompat="@drawable/checkbutton"
-            android:background="@drawable/checkbutton"
-            android:id="@+id/check_button"
-            android:contentDescription="TODO"
-            tools:ignore="VectorDrawableCompat"
-            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/next_button" android:layout_marginRight="8dp"
-            android:layout_marginBottom="20dp" app:layout_constraintBottom_toTopOf="@+id/button"/>
-
-    <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="300dp" android:layout_height="300dp"
-            android:src="@drawable/img_20190318_215836_662"
-            android:id="@+id/circleImageView"
-            tools:ignore="MissingConstraints" android:layout_marginTop="80dp" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.505"/>
+    </android.support.v7.widget.RecyclerView>
 
 </android.support.constraint.ConstraintLayout>
