--- a/app/src/main/res/layout/informacion_fragment.xml
+++ b/app/src/main/res/layout/informacion_fragment.xml
@@ -6,33 +6,140 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/grey"
-        tools:context=".Informacion_Fragment">
+        tools:context=".model.Contacto.Informacion_Fragment">
 
     <Button
             android:layout_width="455dp"
             android:layout_height="70dp"
             android:background="@color/green"
-            android:id="@+id/button3" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:id="@+id/abajo_button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
+
     <ImageButton
-            android:layout_width="136dp"
-            android:layout_height="135dp"
+            android:src="@drawable/facebook_logos"
+            app:layout_constraintTop_toBottomOf="@id/textView"
+            android:layout_marginTop="50dp"
+            android:background="@color/grey"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/doglost"
-            android:background="@drawable/doglost"
-            android:id="@+id/ball_button"
-            android:contentDescription="TODO"
-            tools:ignore="VectorDrawableCompat"
-            android:layout_marginTop="192dp"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:id="@+id/facebook_imageButton"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="120dp"
+            app:layout_constraintLeft_toRightOf="@+id/instagram_imageButton"
+            />
+
+    <ImageButton
+            android:src="@drawable/facebook_logos"
+            app:layout_constraintTop_toBottomOf="@id/infoHuellitas"
+            android:layout_marginTop="12dp"
+            android:background="@color/grey"
+            android:scaleType="fitCenter"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:id="@+id/facebook_imageButton_huellitas"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            app:layout_constraintLeft_toRightOf="@+id/instagram_imageButton"
+    />
+
+    <ImageButton
+            android:scaleType="fitCenter"
+            android:layout_marginTop="58dp"
+            android:layout_marginRight="40dp"
+            android:background="@color/grey"
+            android:src="@drawable/instagram_png12"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:id="@+id/instagram_imageButton"
+            app:layout_constraintTop_toBottomOf="@id/textView"
+            app:layout_constraintRight_toLeftOf="@+id/facebook_imageButton"
+            />
+
+    <ImageButton
+            android:scaleType="fitCenter"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginLeft="20dp"
+            android:background="@color/grey"
+            android:src="@drawable/instagram_png12"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:id="@+id/instagram_imageButton_huellitas"
+            app:layout_constraintTop_toBottomOf="@id/infoHuellitas"
+            app:layout_constraintLeft_toRightOf="@+id/huella"
+    />
+
+    <ImageButton
+            android:scaleType="fitCenter"
+            android:layout_marginTop="58dp"
+            android:layout_marginRight="40dp"
+            android:background="@color/grey"
+            android:src="@drawable/instagram_png12"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:id="@+id/instagram_huellitas"
+            app:layout_constraintTop_toBottomOf="@id/textView"
+            app:layout_constraintRight_toLeftOf="@+id/facebook_imageButton"
+    />
+
+    <TextView
+            android:text="Para conocer ofertas, eventos, nuevos productos, ser paseador o publicar perritos, siguenos en nuestras redes sociales escríbenos a:
+            adogtapp.services@gmail.com"
+            android:layout_marginBottom="100dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            app:layout_constraintTop_toBottomOf="@id/textView2"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:id="@+id/textView"/>
+
+    <TextView
+            android:text="Contáctanos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="116dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="116dp"
-            android:layout_marginBottom="67dp" app:layout_constraintBottom_toTopOf="@+id/donaciones"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.139"/>
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:textSize="32sp"
+            android:textColor="@color/white"
+            android:id="@+id/textView2"
+            app:layout_constraintHorizontal_bias="0.207"
+            app:layout_constraintVertical_bias="1.0"/>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/huella"
+            app:layout_constraintTop_toBottomOf="@+id/instagram_imageButton"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="80dp"
+            android:layout_marginLeft="30dp"
+            android:src="@drawable/huellitas"
+
+    />
+
+    <TextView
+            android:id="@+id/infoHuellitas"
+            android:text="Huellitas de Acero A.C. Puerto Escondido
+Coahuila (448,02 km)
+70934 Municipio de Santa María Colotepec
+ 01 954 118 8978"
+            android:textSize="15sp"
+            android:textColor="@color/white"
+            app:layout_constraintLeft_toRightOf="@+id/huella"
+            app:layout_constraintTop_toTopOf="@+id/huella"
+            android:layout_marginLeft="30dp"
+            android:layout_width="175dp"
+            android:layout_height="wrap_content"/>
 </android.support.constraint.ConstraintLayout>
