--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
-                                             android:background="@android:color/holo_orange_dark"
+                                             android:background="@color/blueboy"
                                              tools:context=".MainActivity">
 
     <EditText
@@ -90,5 +90,25 @@
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="0.497"/>
+    <ImageView
+            android:layout_width="69dp"
+            android:layout_height="62dp" app:srcCompat="@android:drawable/ic_input_add"
+            android:id="@+id/imageView2"
+            app:layout_constraintTop_toTopOf="@+id/photo_user_button"
+            app:layout_constraintBottom_toBottomOf="@+id/photo_user_button"
+            app:layout_constraintStart_toStartOf="@+id/photo_user_button"
+            app:layout_constraintEnd_toEndOf="@+id/photo_user_button" app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias="1.0"/>
+    <TextView
+            android:text="Click to add profile picture"
+            android:layout_width="wrap_content"
+            android:layout_height="15dp"
+            android:id="@+id/textView3" android:textSize="12sp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/imageView2"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/username_edittext"
+            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/imageView2"
+            android:layout_marginLeft="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.829"
+            app:layout_constraintVertical_bias="0.476" android:textColor="@android:color/tertiary_text_light"/>
 
 </android.support.constraint.ConstraintLayout>
