--- a/app/src/main/res/layout/activity_carrito.xml
+++ b/app/src/main/res/layout/activity_carrito.xml
@@ -2,18 +2,18 @@
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent" android:layout_height="match_parent">
+        android:layout_width="match_parent" android:layout_height="match_parent" tools:layout_editor_absoluteY="81dp">
 
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_carrito"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_width="395dp"
+            android:layout_width="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/Carrito"
-            android:layout_height="wrap_content"
-            tools:layout_editor_absoluteY="8dp"
-            tools:layout_editor_absoluteX="8dp"/>
+            android:layout_height="0dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/sim"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"/>
     <TextView
             android:id="@+id/Carrito"
             android:padding="8dp"
@@ -58,13 +58,23 @@
             app:layout_constraintRight_toRightOf="parent"
             android:textSize="42sp"
             app:layout_constraintBottom_toTopOf="@+id/HacerOrden_Button"
-            tools:text=""
+            tools:text="0 MXN"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:layout_height="wrap_content"
             tools:layout_editor_absoluteY="441dp"
             tools:layout_editor_absoluteX="143dp" android:layout_marginRight="8dp"/>
+    <ImageView
+            android:layout_width="59dp"
+            android:layout_height="71dp" app:srcCompat="@drawable/delete"
+            android:id="@+id/delete_button"
+            app:layout_constraintStart_toEndOf="@+id/Carrito" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/recycler_carrito" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHorizontal_bias="0.958" app:layout_constraintVertical_bias="0.0"
+    />
 
 
 </android.support.constraint.ConstraintLayout>
