--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto"
-                                             xmlns:tools="http://schemas.android.com/tools"
-                                             android:layout_width="match_parent"
-                                             android:layout_height="match_parent"
-                                             android:background="@android:color/holo_orange_dark">
+<android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#626FB3">
 
     <EditText
             android:id="@+id/email_edittext"
@@ -14,7 +14,7 @@
             android:layout_marginLeft="32dp"
             android:layout_marginRight="32dp"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="300dp"
             android:background="@drawable/redonditos_login"
             android:ems="10"
             android:hint="Email"
@@ -22,7 +22,8 @@
             android:paddingLeft="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+    />
 
     <EditText
             android:id="@+id/password_edittext"
@@ -36,7 +37,7 @@
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="@+id/email_edittext"
             app:layout_constraintStart_toStartOf="@+id/email_edittext"
-            app:layout_constraintTop_toBottomOf="@+id/email_edittext" />
+            app:layout_constraintTop_toBottomOf="@+id/email_edittext"/>
 
     <Button
             android:id="@+id/login_button_login"
@@ -48,7 +49,7 @@
 
             app:layout_constraintEnd_toEndOf="@+id/password_edittext"
             app:layout_constraintStart_toStartOf="@+id/password_edittext"
-            app:layout_constraintTop_toBottomOf="@+id/password_edittext" />
+            app:layout_constraintTop_toBottomOf="@+id/password_edittext"/>
 
     <TextView
             android:id="@+id/back_to_register"
@@ -64,4 +65,27 @@
             app:layout_constraintEnd_toEndOf="@+id/login_button_login"
             app:layout_constraintStart_toStartOf="@+id/login_button_login"
             app:layout_constraintTop_toBottomOf="@+id/login_button_login"/>
+    <ImageView
+            android:layout_width="400dp"
+            android:scaleType="fitCenter"
+            android:layout_height="200dp"
+            android:layout_marginBottom="70dp"
+            app:layout_constraintBottom_toTopOf="@+id/email_edittext"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:srcCompat="@drawable/ic_dogdog"
+            android:id="@+id/imageView5"
+            app:layout_constraintBottom_toBottomOf="parent"
+
+    />
+
+    <ImageView
+            android:src="@drawable/bienvenido"
+            android:layout_width="300dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/imageView5"
+            app:layout_constraintTop_toTopOf="@id/imageView5"
+            android:layout_marginTop="230dp"
+            android:layout_height="100dp"/>
 </android.support.constraint.ConstraintLayout>
