--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
-                                             android:background="@color/blueboy"
+                                             android:background="#626FB3"
                                              tools:context=".MainActivity">
 
     <EditText
@@ -35,7 +35,7 @@
             android:paddingLeft="16dp"
             app:layout_constraintEnd_toEndOf="@+id/username_edittext"
             app:layout_constraintStart_toStartOf="@+id/username_edittext"
-            app:layout_constraintTop_toBottomOf="@+id/username_edittext" />
+            app:layout_constraintTop_toBottomOf="@+id/username_edittext"/>
 
     <EditText
             android:id="@+id/password_edittext"
@@ -49,7 +49,7 @@
             android:paddingLeft="16dp"
             app:layout_constraintEnd_toEndOf="@+id/email_edittext"
             app:layout_constraintStart_toStartOf="@+id/email_edittext"
-            app:layout_constraintTop_toBottomOf="@+id/email_edittext" />
+            app:layout_constraintTop_toBottomOf="@+id/email_edittext"/>
 
     <Button
             android:id="@+id/register_button"
@@ -59,7 +59,7 @@
             android:text="Register"
             app:layout_constraintEnd_toEndOf="@+id/password_edittext"
             app:layout_constraintStart_toStartOf="@+id/password_edittext"
-            app:layout_constraintTop_toBottomOf="@+id/password_edittext" />
+            app:layout_constraintTop_toBottomOf="@+id/password_edittext"/>
 
     <TextView
             android:id="@+id/have_an_account"
@@ -111,4 +111,13 @@
             android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.829"
             app:layout_constraintVertical_bias="0.476" android:textColor="@android:color/tertiary_text_light"/>
 
+
+    <android.support.v7.widget.AppCompatImageView
+            app:srcCompat="@drawable/ic_dogdog"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_margin="15dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/have_an_account"/>
 </android.support.constraint.ConstraintLayout>
