--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,19 +6,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:ignore="ContentDescription"
+        android:background="@color/white"
         tools:context=".SplashActivity">
+
 
     <ImageView
             android:id="@+id/imageView"
-            android:layout_width="238dp"
-            android:layout_height="238dp"
+            android:layout_width="400dp"
+            android:layout_height="400dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_heart_foreground"/>
+            app:srcCompat="@drawable/logoapp_img"/>
 
 </android.support.constraint.ConstraintLayout>
