--- a/app/src/main/res/layout/adoptar_details.xml
+++ b/app/src/main/res/layout/adoptar_details.xml
@@ -7,6 +7,7 @@
         <TextView
                 android:id="@+id/nombre_perrito_Text"
                 android:textSize="42sp"
+                app:layout_constraintTop_toTopOf="parent"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:textColor="@color/white"
@@ -24,12 +25,12 @@
         <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/foto_perrito_Image"
                 app:layout_constraintTop_toBottomOf="@+id/nombre_perrito_Text"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="247dp"
+                android:layout_height="218dp"
                 app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                />
+        />
 
         <TextView
                 android:id="@+id/edad_perrito"
@@ -80,7 +81,8 @@
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                 tools:text="Hola soy la pequeña calceta y asi , estoy escribiendo para ver como se ve GEnial al parecer , los amo "
-                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
+                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+                app:layout_constraintHorizontal_bias="0.48" app:layout_constraintVertical_bias="0.126"/>
 
 
         <Button
@@ -95,9 +97,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintHorizontal_bias="0.498"
         />
 
 
