--- a/app/src/main/res/layout/fragment_donar.xml
+++ b/app/src/main/res/layout/fragment_donar.xml
@@ -3,30 +3,76 @@
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
+             android:background="@color/white"
              tools:context=".Donar">
     <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent" android:id="@+id/constraint">
 
-        <Button
-                android:text="Donar"
+
+
+
+        <android.support.v7.widget.AppCompatImageButton
+                android:id="@+id/donar_button"
+                app:srcCompat="@drawable/ic_heart_foreground"
+                android:background="@color/white"
                 android:layout_width="wrap_content"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginBottom="60dp"
+                app:layout_constraintTop_toBottomOf="@+id/cantidad_text"
+                android:layout_marginTop="15dp"
+                app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/donar_button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintVertical_bias="0.717" android:onClick="donarDinero"/>
+                app:layout_constraintHorizontal_bias="0.498"/>
+
+        <TextView
+                android:text="¡DONAR!"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                app:layout_constraintTop_toTopOf="@id/donar_button"
+                android:layout_marginTop="35dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
         <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:ems="10"
-                android:id="@+id/cantidad_text" android:layout_marginBottom="44dp"
-                app:layout_constraintBottom_toTopOf="@+id/donar_button" android:layout_marginEnd="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/imageView3"
+                android:id="@+id/cantidad_text"
+                android:layout_marginBottom="44dp"
+                app:layout_constraintBottom_toTopOf="@+id/donar_button"
+                android:layout_marginEnd="8dp"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginLeft="8dp" android:hint="Ingresa la cantidad a donar"/>
+        <TextView
+                android:text="Tu donación apoya a la fundación huellitas de acero a continuar con su importante labor.
+           ¡MUCHAS GRACIAS!"
+                android:textColor="@color/black"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="25dp"
+                android:textSize="20sp"
+                android:layout_width="350dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_height="wrap_content" tools:layout_editor_absoluteY="64dp"
+                tools:layout_editor_absoluteX="152dp" android:id="@+id/textView4"/>
+        <ImageView
+                android:scaleType="fitCenter"
+                android:layout_marginTop="20dp
+"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/textView4"
+                android:src="@drawable/huellitas"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                tools:layout_editor_absoluteY="106dp"
+                tools:layout_editor_absoluteX="105dp"
+                android:id="@+id/imageView3"/>
     </android.support.constraint.ConstraintLayout>
 </FrameLayout>
