--- a/app/src/main/res/layout/fragment_envio.xml
+++ b/app/src/main/res/layout/fragment_envio.xml
@@ -12,149 +12,234 @@
             android:layout_height="match_parent">
 
         <TextView
-                android:text="Nombre:"
-                android:layout_width="70dp"
+                android:text="Nombre Completo:"
+                android:textColor="@color/black"
+                android:layout_width="wrap_content"
                 android:layout_height="25dp"
+
+                app:layout_goneMarginTop="15dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/editText"
+                app:layout_constraintTop_toTopOf="@+id/textView13"
                 android:id="@+id/textView6"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginLeft="48dp" android:layout_marginStart="48dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginStart="15dp"
+                android:textSize="20sp"
                 app:layout_constraintTop_toBottomOf="@+id/textView13" android:layout_marginTop="36dp"/>
         <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
-                android:text="Nombre completo"
+                android:hint="Nombre completo"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginRight="15dp"
+                android:layout_marginEnd="15dp"
+                app:layout_constraintTop_toBottomOf="@id/textView13"
                 android:ems="10"
                 android:id="@+id/editText"
-                app:layout_constraintStart_toEndOf="@+id/textView6" android:layout_marginStart="24dp"
-                android:layout_marginLeft="24dp" android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
-                android:layout_marginTop="68dp"
-                app:layout_constraintTop_toTopOf="parent"/>
+                tools:layout_editor_absoluteY="68dp"
+                tools:layout_editor_absoluteX="166dp"/>
         <TextView
                 android:text="Dirección:"
+                android:textColor="@color/black"
                 android:layout_width="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginStart="15dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:textSize="20sp"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView7" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginLeft="48dp" android:layout_marginStart="48dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginTop="84dp"/>
+                android:id="@+id/textView7"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView6"
+                android:layout_marginTop="30dp" android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toStartOf="@+id/editText2" android:layout_marginRight="8dp"/>
         <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
-                android:text="Calle, número, colonia"
+                android:hint="Calle, número, colonia"
+                android:layout_marginTop="15dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginRight="15dp"
+                android:layout_marginEnd="15dp"
+                app:layout_constraintTop_toBottomOf="@+id/editText"
                 android:ems="10"
-                android:id="@+id/editText2" app:layout_constraintStart_toEndOf="@+id/textView7"
-                android:layout_marginStart="8dp" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
-                android:layout_marginTop="60dp" app:layout_constraintTop_toBottomOf="@+id/editText"
-                app:layout_constraintHorizontal_bias="0.507"/>
+                android:id="@+id/editText2"
+        />
         <TextView
                 android:text="País:"
+                android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView8" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
-                app:layout_constraintEnd_toStartOf="@+id/editText3" android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp" android:layout_marginTop="60dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintHorizontal_bias="0.51"/>
+                android:id="@+id/textView8"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/editText3"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginStart="15dp"
+                android:textSize="20sp"
+                app:layout_constraintTop_toBottomOf="@+id/textView7"
+                android:layout_marginTop="35dp"
+                />
         <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
-                android:text="País"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
+                app:layout_constraintTop_toBottomOf="@id/editText2"
+                android:hint="País"
                 android:ems="10"
                 android:id="@+id/editText3"
-                android:layout_marginEnd="52dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginRight="52dp" android:layout_marginTop="40dp"
-                app:layout_constraintTop_toBottomOf="@+id/editText2"/>
+                tools:layout_editor_absoluteY="258dp"
+                tools:layout_editor_absoluteX="183dp"/>
         <TextView
                 android:text="Estado:"
+                android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView9" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
-                app:layout_constraintEnd_toStartOf="@+id/editText4" android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp" android:layout_marginTop="64dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView8" app:layout_constraintHorizontal_bias="0.481"/>
+                android:layout_marginLeft="15dp"
+                android:layout_marginStart="15dp"
+                android:textSize="20sp"
+                android:id="@+id/textView9"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/editText4"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                app:layout_constraintHorizontal_bias="0.481"
+                android:layout_marginTop="35dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView8"/>
         <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
-                android:text="Estado"
+                android:hint="Estado"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="15dp"
+                android:layout_marginRight="15dp"
                 android:ems="10"
-                android:id="@+id/editText4" android:layout_marginEnd="52dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginRight="52dp" android:layout_marginTop="40dp"
+                android:id="@+id/editText4"
+                android:layout_marginTop="15dp"
                 app:layout_constraintTop_toBottomOf="@+id/editText3"/>
         <TextView
                 android:text="Ciudad:"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView10"
-                app:layout_constraintTop_toBottomOf="@+id/textView9" android:layout_marginTop="48dp"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="40dp"
-                android:layout_marginStart="40dp"/>
+                android:textColor="@color/black"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="15dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="35dp"
+                android:textSize="20sp"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toStartOf="@+id/editText5"
+                android:layout_marginRight="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView9"/>
         <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
-                android:text="Ciudad"
+                android:hint="Ciudad"
                 android:ems="10"
-                android:id="@+id/editText5" android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/editText4" android:layout_marginEnd="76dp"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="76dp"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="15dp"
+                android:layout_marginRight="15dp"
+                android:id="@+id/editText5"
+                android:layout_marginTop="15dp"
+                app:layout_constraintTop_toBottomOf="@+id/editText4"
+        />
         <TextView
                 android:text="Código Postal:"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView11"
-                app:layout_constraintTop_toBottomOf="@+id/textView10" android:layout_marginTop="36dp"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:layout_marginTop="35dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView10" android:layout_marginStart="8dp"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-                android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/editText8"
-                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
+                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/editText8"
+                android:layout_marginRight="8dp"/>
         <TextView
                 android:text="Teléfono:"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView12"
-                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="32dp"
-                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView11"
-                app:layout_constraintVertical_bias="0.92" android:layout_marginStart="8dp"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+                android:textColor="@color/black"
+                android:layout_marginLeft="15dp"
+                android:layout_marginStart="15dp"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/editText7"
-                android:layout_marginRight="8dp"/>
+                android:layout_marginRight="8dp" android:layout_marginTop="33dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView11"/>
         <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:ems="10"
-                android:id="@+id/editText7" android:layout_marginBottom="16dp"
-                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/editText8" app:layout_constraintVertical_bias="0.678"
-                android:layout_marginEnd="52dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginRight="52dp"/>
+                android:hint="Telefono/celular"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="12dp"
+                android:layout_marginRight="12dp"
+                android:layout_marginTop="15dp"
+                android:id="@+id/editText7"
+                app:layout_constraintTop_toBottomOf="@id/editText8"
+                tools:layout_editor_absoluteY="437dp"/>
         <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="number"
+                android:hint="CP"
                 android:ems="10"
-                android:id="@+id/editText8" android:layout_marginTop="12dp"
-                app:layout_constraintTop_toBottomOf="@+id/editText5" android:layout_marginEnd="32dp"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="32dp"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="15dp"
+                android:layout_marginRight="15dp"
+                android:id="@+id/editText8"
+                android:layout_marginTop="15dp"
+                app:layout_constraintTop_toBottomOf="@+id/editText5"
+        />
         <TextView
                 android:text="Indique su dirección:"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView13" android:layout_marginTop="24dp"
-                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.15"/>
+                android:id="@+id/textView13"
+                android:textSize="20sp"
+                android:layout_marginTop="24dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                app:layout_constraintHorizontal_bias="0.15"/>
         <Button
-                android:text="Buttonr Información"
+                android:text="Todo listo"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" tools:layout_editor_absoluteY="113dp"
-                tools:layout_editor_absoluteX="87dp" android:id="@+id/enviar_button"/>
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:id="@+id/enviar_button" android:layout_marginBottom="32dp" android:layout_marginRight="60dp"/>
+        <ImageView
+                app:srcCompat="@drawable/ic_logoapp"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:id="@+id/imageView4"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="20dp"
+                app:layout_constraintHorizontal_bias="0.134" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView12"/>
+
+
     </android.support.constraint.ConstraintLayout>
 
 </FrameLayout>
