--- a/app/src/main/res/layout/paseadores_details.xml
+++ b/app/src/main/res/layout/paseadores_details.xml
@@ -51,6 +51,7 @@
                 android:textSize="25sp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="20dp"
+                app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/descripcion_paseador"
                 app:layout_constraintRight_toRightOf="@+id/foto_paseador"
 
@@ -61,6 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="25sp"
+                app:layout_constraintRight_toRightOf="parent"
                 android:layout_marginLeft="20dp"
                 app:layout_constraintTop_toBottomOf="@+id/descripcion_paseador"
                 app:layout_constraintLeft_toRightOf="@+id/horario1_paseador"
@@ -79,9 +81,11 @@
                 />
         <Button
                 android:text="Button"
+                android:visibility="invisible"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/button3" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+                android:id="@+id/button3"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                 android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/foto_paseador" android:layout_marginBottom="8dp"
