--- a/app/src/main/res/layout/perrito_row.xml
+++ b/app/src/main/res/layout/perrito_row.xml
@@ -5,14 +5,22 @@
 
     <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:textColor="@color/white"
             android:textSize="48sp"
             android:gravity="center"
-            android:id="@+id/nombre_perrito" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
+            android:id="@+id/nombre_perrito"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_goneMarginBottom="10dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="530dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/foto_perrito"
