--- a/app/src/main/res/layout/adoptar_details.xml
+++ b/app/src/main/res/layout/adoptar_details.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+<android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
                                              android:background="@color/grey"
                                              android:layout_height="match_parent"
                                              xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -63,9 +65,12 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
                 android:textSize="20sp"
-                app:layout_constraintBottom_toTopOf="@+id/button30" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/button30"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="8dp"
                 tools:text="Huellitas de acero"
                 android:layout_marginStart="8dp"/>
 
@@ -78,11 +83,15 @@
                 android:textColor="@color/white"
                 app:layout_constraintTop_toBottomOf="@+id/talla_perrito"
                 android:paddingTop="10dp"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                app:layout_constraintStart_toStartOf="parent"
                 tools:text="Hola soy la pequeña calceta y asi , estoy escribiendo para ver como se ve GEnial al parecer , los amo "
-                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
-                app:layout_constraintHorizontal_bias="0.48" app:layout_constraintVertical_bias="0.126"/>
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                app:layout_constraintHorizontal_bias="0.48"
+                app:layout_constraintVertical_bias="0.126"/>
 
 
         <Button
