--- a/app/src/main/res/layout/comida_details.xml
+++ b/app/src/main/res/layout/comida_details.xml
@@ -17,7 +17,7 @@
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="parent"/>
         <TextView
-                android:id="@+id/marca_comida_D"
+                android:id="@+id/cantidad_comida_D"
                 android:textSize="25sp"
                 android:layout_width="170dp"
                 android:layout_height="wrap_content"
@@ -25,14 +25,28 @@
                 app:layout_constraintLeft_toRightOf="@+id/foto_comida_D"
                 app:layout_constraintTop_toBottomOf="@+id/nombre_comida_D"
         />
+        <TextView
+                android:id="@+id/marca_comida_D"
+                android:textSize="25sp"
+                android:layout_width="170dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                app:layout_constraintLeft_toRightOf="@+id/foto_comida_D"
+                app:layout_constraintTop_toBottomOf="@+id/cantidad_comida_D"
+        />
 
         <TextView
                 android:id="@+id/descripcion_comida_D"
+                android:textSize="22sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
+                android:textAlignment="center"
                 app:layout_constraintTop_toBottomOf="@+id/foto_comida_D"
-                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:layout_editor_absoluteX="0dp"
+                app:layout_constraintVertical_bias="0.035"/>
 
         <TextView
                 android:id="@+id/precio_comida_D"
