--- a/app/src/main/res/layout/extras_details.xml
+++ b/app/src/main/res/layout/extras_details.xml
@@ -1,74 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
                                              android:layout_height="match_parent"
                                              xmlns:app="http://schemas.android.com/apk/res-auto">
         <TextView
-                android:id="@+id/nombre_extra_D"
+                android:id="@+id/nombre_extra_E"
                 android:textSize="42sp"
                 android:layout_width="170dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
-                app:layout_constraintLeft_toRightOf="@+id/foto_extra_D"
+                app:layout_constraintLeft_toRightOf="@+id/foto_extra_E"
                 android:layout_marginLeft="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="parent"/>
+
         <TextView
-                android:id="@+id/marca_extra_D"
+                android:id="@+id/marca_extra_E"
                 android:textSize="25sp"
                 android:layout_width="170dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
-                app:layout_constraintLeft_toRightOf="@+id/foto_extra_D"
-                app:layout_constraintTop_toBottomOf="@+id/nombre_extra_D"
-        />
+                app:layout_constraintLeft_toRightOf="@+id/foto_extra_E"
+                app:layout_constraintTop_toBottomOf="@+id/nombre_extra_E"
+                app:layout_constraintEnd_toEndOf="@+id/cantidad_extra_E"
+                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/foto_extra_E"
+                app:layout_constraintVertical_bias="0.086"/>
 
         <TextView
-                android:id="@+id/descripcion_extra_D"
+                android:id="@+id/descripcion_extra_E"
+                android:textSize="22sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
-                app:layout_constraintTop_toBottomOf="@+id/foto_extra_D"
-                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
+                android:textAlignment="center"
+                app:layout_constraintTop_toBottomOf="@+id/foto_extra_E"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:layout_editor_absoluteX="0dp"
+                app:layout_constraintVertical_bias="0.035"/>
 
         <TextView
-                android:id="@+id/precio_extra_D"
+                android:id="@+id/precio_extra_E"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="25sp"
                 android:layout_marginLeft="8dp"
-                app:layout_constraintLeft_toRightOf="@+id/foto_extra_D"
-                app:layout_constraintTop_toBottomOf="@+id/marca_extra_D"
+                app:layout_constraintLeft_toRightOf="@+id/foto_extra_E"
+                app:layout_constraintTop_toBottomOf="@+id/marca_extra_E"
 
-        />
+                android:text="$$$$$$$$$$$"
+                android:layout_marginTop="8dp"/>
+        <TextView
+                android:id="@+id/cantidad_extra_E"
+                android:textSize="25sp"
+                android:layout_width="170dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                app:layout_constraintLeft_toRightOf="@+id/foto_extra_E"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/precio_extra_E"/>
+
+
 
 
         <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/foto_extra_D"
+                android:id="@+id/foto_extra_E"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:padding="8dp"
-                />
+        />
         <Button
-                android:text="Agregar al carrito"
+                android:text="Agregar al carrito "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/Extra_Button_D"
-                app:layout_constraintStart_toStartOf="parent"
+                android:id="@+id/Extra_Button_D" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginLeft="8dp"
-                android:layout_marginStart="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/foto_extra_D"
-                android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintHorizontal_bias="0.498"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/foto_extra_E" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintVertical_bias="0.898"/>
+
+
 </android.support.constraint.ConstraintLayout>
