--- a/app/src/main/res/layout/extras_row.xml
+++ b/app/src/main/res/layout/extras_row.xml
@@ -38,6 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="12dp"
+            android:textSize="25sp"
             android:textAlignment="center"
             android:textColor="@color/white"
             app:layout_constraintTop_toBottomOf="@+id/nombre_extra"
@@ -49,25 +50,12 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"/>
 
-    <TextView
-            android:id="@+id/precio_extra"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="12dp"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            app:layout_constraintTop_toBottomOf="@+id/marca_extra"
-            tools:text="Paseos de taxqueña"
-            app:layout_constraintLeft_toRightOf="@+id/pesos_extra"
-            android:paddingLeft="4dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
-            />
+
 
     <TextView
-            android:id="@+id/pesos_extra"
+            android:id="@+id/precio_extra"
             android:text="$"
+            android:textSize="25sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="12dp"
@@ -81,13 +69,4 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"/>
 
-    <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/oferta_extra"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:src="@drawable/ic_stars_black_24dp"
-app:layout_constraintTop_toTopOf="@+id/foto_extra"
-            app:layout_constraintLeft_toLeftOf="@+id/foto_extra"
-            tools:layout_editor_absoluteY="16dp"
-            tools:layout_editor_absoluteX="16dp"/>
 </android.support.constraint.ConstraintLayout>
